--- a/source/widget/UM.bill/bill.less
+++ b/source/widget/UM.bill/bill.less
@@ -363,7 +363,7 @@
                 overflow: hidden;font-size: 12px;
                 h3 {float: left;display: inline;font-size: 12px;font-weight: bold;color: #333;}
                 .extra_r {
-                    float: right;display: inline;
+                    float: right;display: inline;margin-top: 14px;
                     a{
                         color: #3bafda;
                     }
@@ -421,6 +421,16 @@
                     &.f_detailAddress {display: none;}
                 }
             }
+        }
+        .loading_div{
+            height: 50px;
+            width: 100%;
+            margin-bottom: 20px;
+            background-color: #fcfcfc;
+            border: 1px solid #eaeaea;
+            text-align: center;
+            line-height: 50px;
+            color: #656565;
         }
     }
 }
