--- a/source/widget/UM.bill/bill.less
+++ b/source/widget/UM.bill/bill.less
@@ -68,6 +68,9 @@
     background-color: #a0a0a0;
     color: #fff;
 }
+.bill-apply-btn{
+    background-color: #3bafda;
+}
 .bill-details{
     margin-bottom: 20px;
     overflow: hidden;
