学习中心增加了退课、临时调课和永久调课功能

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -259,9 +259,9 @@
 			}
 		}
 		.amount-show{
-			margin-top: 15px;
+			margin-top: 10px;
 			.btn{
-				margin-right: 10px;
+				margin-right: 8px;
 				position: relative;
 				.newLabel{
 					position: absolute;
@@ -1259,5 +1259,170 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 		height: 280px;
 		overflow-y: auto;
 		padding: 0 15px;
+	}
+}
+// 学习中心后期改版
+.courselist-innner-left{
+	float: left;
+	width: 78%;
+	.courser-innner-up{
+		overflow: hidden;
+		height: 150px;
+		.course-center{
+			width: 89%;
+		}
+	}
+}
+.drop-course-detail-inner{
+	padding: 20px 82px 5px;
+	.drop-charge-tip{
+		font-size: 16px;
+	}
+	p{
+		color: #666;
+		font-size: 14px;
+		span.drop-charge{
+			font-size: 24px;
+			margin: 0 5px;
+			background: url('../Public.Module/img/answer.png') no-repeat right center;
+			padding-right: 20px;
+		}
+		span{
+			color: #e74c3c;
+		}
+	}
+	p.drop-charge-explain{
+		margin-bottom: 0;
+	}
+	p.drop-course-btn-wrap{
+		text-align: center;
+		margin-top: 35px;
+	}
+}
+.ajust-course-btn{
+	width: 140px;
+	height: 46px;
+	background: #e74c3c;
+	font-size: 16px;
+	line-height: 46px;
+	text-align: center;
+	display: inline-block;
+	color: #fff;
+	&:hover{
+		color: #fff;
+	} 
+}	
+.drop-course-success-inner{
+	background: url('img/success.png') no-repeat left center;
+	width: 500px;
+	height: 246px;
+	line-height: 246px;
+	text-align: right;
+	font-size: 24px;
+	color: #e74c3c;
+	padding-right: 35px;
+	margin: 0 auto;
+	span{
+		font-size: 14px;
+		color: #666;
+	}
+}
+.permanent-course-success-inner{
+	text-align: left;
+	line-height: 24px;
+	padding: 16px 0 46px 250px;
+	width: 600px;
+	height: 309px;
+	p.permanent-course-success-inner-tip01{	
+		font-size: 24px;
+		margin: 30px 0 10px;
+	}
+	p.permanent-course-success-inner-tip02{	
+		font-size: 16px;
+		color: #333;
+		margin-bottom: 5px;
+		span{
+			color: #e74c3c;
+		}
+	}
+	p.permanent-course-success-inner-tip03{	
+		font-size: 14px;
+		color: #333;
+		span{
+			color: #e74c3c;
+		}
+	}
+}
+.temporary-adjust-course-detail-inner{
+	p{
+		font-size: 16px;
+		color: #666;
+		span{
+			color: #e74c3c;
+		}
+	}
+	p.ajusted-tips{
+		padding-left: 79px;
+	}
+	span{
+		font-size: 16px;
+	}
+	p.drop-course-btn-wrap{
+		text-align: center;
+		margin-top: 25px;
+	}
+	.adjust-course-select{
+		margin-bottom: 12px;
+		color: #666;
+		select{
+			line-height: 35px;
+			padding: 6px 3px;
+			border: 1px solid #dfdfdf;
+		}
+	}
+}
+
+.permanent-adjust-course-btn{
+	margin-top: 35px;
+	a{
+		width: 140px;
+		height: 46px;
+		background: #37bc9b;
+		font-size: 16px;
+		line-height: 46px;
+		text-align: center;
+		display: inline-block;
+		color: #fff;
+		&:hover{
+			color: #fff;
+		} 
+	}
+}
+.permanent-adjust-course-detail-inner{
+	p{
+		font-size: 16px;
+		color: #666;
+		span{
+			color: #e74c3c;
+		}
+	}
+	p.ajusted-tips{
+		padding-left: 79px;
+	}
+	span{
+		font-size: 16px;
+	}
+	p.drop-course-btn-wrap{
+		text-align: center;
+		margin-top: 25px;
+	}
+	.adjust-course-select{
+		margin-bottom: 12px;
+		color: #666;
+		select{
+			line-height: 35px;
+			padding: 6px 3px;
+			border: 1px solid #dfdfdf;
+		}
 	}
 }
