--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -37,4 +37,18 @@
 .live-order{background-color: #ffbc3c;}
 .liveOrderFailModal .modal-body,.liveOrderSuccessModal .modal-body{text-align: center;height: 420px}
 .orderFailTip,.orderSuccessTip{position: absolute;bottom: 0;right: 10px;margin-bottom: 10px;color: #999;}
-
+.live-check-more{
+    height: 50px;
+    width: 100%;
+    margin-bottom: 20px;
+    background-color: #fcfcfc;
+    border: 1px solid #eaeaea;
+    text-align: center;
+    line-height: 50px;
+    color: #1e89e0;
+    cursor: pointer;
+    i{
+        top: 2px;
+        margin-left: 4px;
+    }
+}
