--- a/source/widget/Mall.live/live.css
+++ b/source/widget/Mall.live/live.css
@@ -62,7 +62,7 @@
   height: 80px;
 }
 .live-course-content {
-  width: 237px;
+  width: 260px;
   position: absolute;
   top: 12px;
   left: 10px;
@@ -83,7 +83,7 @@
 }
 .live-course-title {
   height: 30px;
-  width: 245px;
+  width: 271px;
   position: absolute;
   bottom: 0;
   background-color: #000;
@@ -92,7 +92,7 @@
 }
 .live-course-show-title {
   height: 30px;
-  width: 245px;
+  width: 271px;
   position: absolute;
   bottom: 0;
   color: #fff;
@@ -102,7 +102,7 @@
   overflow: hidden;
 }
 .live-time-tip {
-  width: 245px;
+  width: 271px;
   background-color: #f9f9f9;
   color: #ed5565;
 }
@@ -183,4 +183,19 @@
   right: 10px;
   margin-bottom: 10px;
   color: #999;
+}
+.live-check-more {
+  height: 50px;
+  width: 100%;
+  margin-bottom: 20px;
+  background-color: #fcfcfc;
+  border: 1px solid #eaeaea;
+  text-align: center;
+  line-height: 50px;
+  color: #1e89e0;
+  cursor: pointer;
+}
+.live-check-more i {
+  top: 2px;
+  margin-left: 4px;
 }
