--- a/source/widget/Mall.live/live.less
+++ b/source/widget/Mall.live/live.less
@@ -1,3 +1,12 @@
+@width:100%;
+@borderea:1px solid #eaeaea;
+@borderf6:1px solid #f6f6f6;
+@fs12:12px;
+@fs26:26px;
+@pt:11px;
+@c9:#999;
+@margin:0 17px;
+
 .live-title{color: #999;font-size: 18px;position: relative;margin-bottom: 20px;}
 .live-title span{display: inline-block;margin-right: 15px;float: left;}
 .live-title div{height: 22px;margin-left: 87px;border-bottom: 1px solid #eaeaea;}
@@ -7,13 +16,14 @@
 .live-scroll-box,.live-list-container{overflow: hidden;width: 1274px;}
 .live-scroll-box-container{width: 100%;}
 .live-scroll-container{position: relative;width: 100%;max-height: 588px;overflow: hidden;margin-bottom: 30px;}
-.live-list{overflow: hidden;width: 100%;margin-bottom: 90px;}
+.live-list{overflow: hidden;width: 100%;margin-bottom: 20px;}
 .live-card{float: left;width: 271px;margin-right: 35px;}
+.live-card:nth-child(4n){margin-right:0;}
 .live-course-hover{position: absolute;bottom: 0;height: 80px;}
 .live-course-content{width: 260px;position: absolute;top:12px;left: 10px;color: #fff;font-size: 14px;text-overflow: ellipsis}
 .live-course-box{position: relative;display: inline-block;}
 .live-course-box img{width: 271px;height: 198px;}
-.live-teacher-photo{margin-top: 11px;}
+.live-teacher-photo{margin-top: 20px;}
 .live-course-title{height: 30px;width: 271px;position: absolute;bottom: 0;background-color: #000;opacity: 0.5;filter:alpha(opacity=50);}
 .live-course-show-title{height: 30px;width: 271px;position: absolute;bottom: 0;color: #fff;font-size: 14px;text-align: center;line-height: 30px;overflow: hidden;}
 .live-time-tip{width: 271px;background-color: #f9f9f9;color: #ed5565;}
@@ -52,3 +62,18 @@
         margin-left: 4px;
     }
 }
+.live-rank-title{width: @width;height: 38px;font-size: @fs12;border: @borderea;background-color: #fcfcfc;
+.current{
+    background-color: #fff;
+    color: #1e89e0;
+    border-right: 1px solid #eaeaea;
+}
+}
+.live-rank-focus {color: #1e89e0;}
+.live-rank-title .glyphicon{top: 2px;}
+.live-rank-title li{float: left;width: 65px;height: 36px;text-align: center;line-height:36px;list-style: none;cursor: pointer;}
+.live-rank-num{display: inline-block;width: 65px;height: 36px;margin-left:-1px;text-align: center;line-height: 36px;border-left: 1px solid #eaeaea;}
+.live-hidden{
+    display: none;
+}
+.text-center{text-align: center;}
