--- a/source/widget/UserHome.homework/homework.less
+++ b/source/widget/UserHome.homework/homework.less
@@ -782,7 +782,10 @@
    bottom: 0;
    width: 100%;
    z-index: 9999999;
-   padding: 15px 54px 0 0;
+   padding-top: 15px;
+   padding-top: 0\9;
+   padding-right: 54px;
+
 }
 
 
