首页轮播调整

--- a/source/widget/Public.FocusPic/ui-focusPic.css
+++ b/source/widget/Public.FocusPic/ui-focusPic.css
@@ -42,11 +42,10 @@
   top: -20px;
 }
 #carousel-example-generic .focus-num-wrap ol.focus-num {
-  width: 100%;
-  left: 408px;
+  width: 712px;
+  left: 388px;
 }
 #carousel-example-generic .focus-num-wrap ol.focus-num li {
-  float: left;
   width: 66px;
   height: 26px;
   line-height: 26px;
