--- a/source/widget/UserHome.homework/homework.less
+++ b/source/widget/UserHome.homework/homework.less
@@ -447,14 +447,15 @@
         &.homework-Feedback-describe{
             float: left;
             width: 480px;
+            padding-right: 10px;
             color: #333;
             .font-size(12px);
             .font-family;
             line-height: 24px;
             height: 140px;
             margin: 15px 0 0 0;
-            overflow-y: auto;
-            overflow-x: hidden;
+            display: none;
+            overflow: hidden;
             word-break:break-all; 
           　word-wrap:break-word;
         }
@@ -724,8 +725,8 @@
     background: #000;
     filter: Alpha(opacity=60);
     padding: 10px;
-    width: 144px;
-    max-height: 534px;
+    width: 124px;
+    max-height: 493px;
     overflow-y: auto;
     z-index: 999;
     display: none;
