--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -1360,6 +1360,18 @@ button.ajust-course-btn[disabled]{
 		}
 	}
 }
+.permanentAdjustCourse{
+	.drop-course-success-inner{
+		span{
+			color: #999;
+			font-size: 12px;
+			b{
+				font-style: normal;
+				font-weight: normal;
+			}
+		}
+	}
+}
 .drop-course-success-inner{
 	text-align: left;
 	line-height: 24px;
