学习中心调课

--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -1372,6 +1372,16 @@ button.ajust-course-btn[disabled]{
 		}
 	}
 }
+.permanent-adjust-nocourse-detail{
+	span{
+		color: #999;
+		font-size: 12px;
+		b{
+			font-style: normal;
+			font-weight: normal;
+		}
+	}
+}
 .drop-course-success-inner{
 	text-align: left;
 	line-height: 24px;
