--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -1546,6 +1546,9 @@ button.ajust-course-btn[disabled]{
 				float: left;
 				line-height: 30px;
 				text-align: center;
+				overflow: hidden;
+				ttext-overflow: ellipsis;
+				white-space: nowrap;
 				&:focus,&:hover{
 					color: #333;
 				}
