--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -1098,13 +1098,100 @@ ul,li{list-style: none;}
     }
 }
 
+//直播筛选
+.container-body {
+    background: #f1f2f6;
+    .col-md-12 {
+       width:1190px; overflow: hidden;
+        .add-selector-pic {width:1180px;overflow: hidden;}
+    }
+    .mb10 {margin-bottom: 20px;}
+}
+.col-course-title {
+    width:100%;
+    height: 70px;
+    line-height: 70px;
+    background: #1e89e0;
+    text-align: center;
+    font-family: 'Microsoft YaHei';
+    .course-sort-label {
+         float:left;width:110px;height:36px;line-height: 36px; background: #fff;border-radius: 18px;font-size: 14px;color: #1e89e0;margin-top:17px;margin-left:10px;
+        span.icon-fa {
+             float: left;width: 25px;height: 25px;background: #1e89e0;border-radius:50%;margin:5px;position: relative;
+            i.fa-angle-left,i.fa-angle-right {width:32px;color: #fff;font-size: 20px;font-weight: bold;position: absolute;left:-4px;top:2px;z-index: 1;}
+        }
+        span.txt {float: left;}
+        &.l-right {
+            float: right;margin-right: 10px;
+            span.icon-fa {
+                float: right;
+                i.fa-angle-right {left:-2px;}
+            }
+             span.txt {margin-left: 17px;}
+        }
+    }
+    span.title {
+       font-size: 30px; color: #fff;
+    }
+}
+.select-subject-list {
+   height: 42px;background: #fff;
+    li {
+        float: left;width:196px;height:40px;line-height: 40px;text-align: center;font-size: 16px;font-family: 'Microsoft YaHei';margin-top:1px;
+        a {
+            display: block;
+            img {padding-right:5px;}
+        }
+        &.current {
+            background: #3bafda;
+            a {color: #fff; }
+        }
+    }
+}
 
-
-
-
-
-
-
+.live-course-rank-list {
+    height: 90px;border-bottom: 1px solid #ededed;
+    div {float: left;font-family:  'Microsoft YaHei';font-size: 14px;}
+    .rank-time {
+        width:375px;
+        p.time {
+            font-size: 22px;padding:12px 0 0 15px;
+            strong{padding-left:10px;color: #e74c3c;font-weight: normal;}
+        }
+        p.difficulty {
+            padding-left:15px;
+            span {color: #999;}
+            a {padding-right:10px;}
+        }
+    }
+    .rank-satisfy {
+        width:165px;line-height: 90px;color: #999;
+        strong{color: #e74c3c;padding-left:10px;}
+    }
+    .rank-coach {
+        width:185px;line-height: 90px;color: #999;
+         a {padding-right: 10px;}
+        img {
+            width:60px;height: 60px;border-radius: 50%;overflow: hidden;
+        }
+    }
+    .rank-places {
+        width:180px;height: 40px;color: #999;padding-top:25px;
+        strong {
+            display: inline-block;width:46px;height: 40px;line-height: 40px;background:url(img/icon-rank.png) no-repeat;color: #fff;text-align: center;font-size: 20px;margin-left:10px;padding-left: 5px;
+        }
+    }
+    .rank-money {
+        width:150px;line-height: 90px;color: #999;
+        strong{color: #666;}
+    }
+    .rank-btn {
+        width:128px;padding-top: 29px;
+        a.btn {
+            background: #e74c3c;color: #fff;width:98px;height: 32px;text-align: center;
+        }
+    }
+}
 
 
 
